--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -12,7 +12,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi', 'armeabi-v7a'
+        }
     }
 
     buildTypes {
@@ -21,7 +24,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 
+    repositories {
+        maven { url "http://repo1.maven.org/maven2" }
+        maven { url 'https://jitpack.io' }
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
@@ -31,5 +46,8 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+    compile(name: 'biz_xiaodi_sdk-release-v3.4.2', ext: 'aar')
+    compile(name: 'lib_base-release-v3.4.4', ext: 'aar')
+    compile(name: 'lib_bluetoothle-release-v3.4.1', ext: 'aar')
+    compile(name: 'LumiSDK', ext: 'aar')
 }
