--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -46,8 +46,20 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile(name: 'biz_xiaodi_sdk-release-v3.4.2', ext: 'aar')
-    compile(name: 'lib_base-release-v3.4.4', ext: 'aar')
-    compile(name: 'lib_bluetoothle-release-v3.4.1', ext: 'aar')
-    compile(name: 'LumiSDK', ext: 'aar')
+    compile(name: 'biz_xiaodi_sdk-release-v3.4.2', ext: 'aar'){
+        force = true
+        transitive = false
+    }
+    compile(name: 'lib_base-release-v3.4.4', ext: 'aar'){
+        force = true
+        transitive = false
+    }
+    compile(name: 'lib_bluetoothle-release-v3.4.1', ext: 'aar'){
+        force = true
+        transitive = false
+    }
+    compile(name: 'LumiSDK', ext: 'aar'){
+        force = true
+        transitive = false
+    }
 }
