--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,19 +45,15 @@ dependencies {
     })
     implementation project(':mylibrary')
     compile(name: 'LumiSDK', ext: 'aar'){
-        force = true
-        transitive = false
+        transitive = true
     }
     compile(name:'biz_xiaodi_sdk-release-v3.4.2', ext:'aar'){
-        force = true
-        transitive = false
+        transitive = true
     }
     compile(name: 'lib_base-release-v3.4.4', ext: 'aar'){
-        force = true
-        transitive = false
+        transitive = true
     }
     compile(name:'lib_bluetoothle-release-v3.4.1', ext:'aar'){
-        force = true
-        transitive = false
+        transitive = true
     }
 }
