--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -47,19 +47,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile(name: 'biz_xiaodi_sdk-release-v3.4.2', ext: 'aar'){
-        force = true
-        transitive = false
+        transitive = true
     }
     compile(name: 'lib_base-release-v3.4.4', ext: 'aar'){
-        force = true
-        transitive = false
+        transitive = true
     }
     compile(name: 'lib_bluetoothle-release-v3.4.1', ext: 'aar'){
-        force = true
-        transitive = false
+        transitive = true
     }
     compile(name: 'LumiSDK', ext: 'aar'){
-        force = true
-        transitive = false
+        transitive = true
     }
 }
